@@ -1,5 +1,8 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.307 2005/07/12 21:48:32 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.308 2005/07/19 21:44:14 rocket Exp $
+
+  19 Jul 2005; Eric Edgar <rocket@gentoo.org> modules/grp_target.py:
+  Fix grp so that grp/use is not required anymore
 
   12 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   -livecd/cdtar/isolinux-2.11-cdtar.tar.bz2,
